--- a/notebooks/long_seq_handle_organized.ipynb
+++ b/notebooks/long_seq_handle_organized.ipynb
@@ -39,7 +39,7 @@
    "execution_count": 80,
    "outputs": [],
    "source": [
-    "class FastaBatchedDataset(object):\n",
+    "class BatchedDataset(object):\n",
     "    \"\"\"inspired by esm2, but instead of sorting the original sequences,\n",
     "    we should really sorting based on tokenized sequences\n",
     "    \"\"\"\n",
@@ -142,7 +142,7 @@
    "execution_count": 81,
    "outputs": [],
    "source": [
-    "class BatchConverter(object):\n",
+    "class BatchHandle(object):\n",
     "    \"\"\"add padding, create labels for GPT-alike training, used as collate_fn, need processed batch indices\n",
     "    processed (labels + tensor) batch.\n",
     "    \"\"\"\n",
@@ -203,9 +203,9 @@
     }
    ],
    "source": [
-    "dataset = FastaBatchedDataset(train_dataset, tokenizer, 10)\n",
+    "dataset = BatchedDataset(train_dataset, tokenizer, 10)\n",
     "batches = dataset.get_batch_indices()\n",
-    "dataloader = torch.utils.data.DataLoader(dataset, collate_fn=BatchConverter(tokenizer),\n",
+    "dataloader = torch.utils.data.DataLoader(dataset, collate_fn=BatchHandle(tokenizer),\n",
     "                                          batch_sampler=batches, pin_memory=True)\n"
    ],
    "metadata": {
