--- a/notebooks/check_tokenized_sequences_new.ipynb
+++ b/notebooks/check_tokenized_sequences_new.ipynb
@@ -15,6 +15,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# get first millions os sequences as train and valid first\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "outputs": [],
    "source": [
@@ -53,37 +67,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Dataset({\n    features: ['attention_mask', 'input_ids', 'labels'],\n    num_rows: 14485425\n})"
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "combined_dataset = load_from_disk('train_combined_tokenized_sequences.hf')\n",
-    "combined_dataset"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
       "text/plain": "Dataset({\n    features: ['attention_mask', 'input_ids', 'labels'],\n    num_rows: 13044435\n})"
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,37 +91,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
-      "text/plain": "Dataset({\n    features: ['attention_mask', 'input_ids', 'labels'],\n    num_rows: 1440990\n})"
+      "text/plain": "13044435"
      },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "valid = load_from_disk('../batch_script/valid_combined_tokenized_sequences.hf')\n",
-    "valid"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "12811554"
-     },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,44 +105,6 @@
    "source": [
     "with open('/data/rozen/home/e0833634/lama/data/swiss_2023_9/uniref50_random90split_8k_512_train_Batch_indices.pkl', 'rb') as f:\n",
     "    batch_indices_ = pickle.load(f)\n",
-    "len(batch_indices_)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [],
-   "source": [
-    "with open('/data/rozen/home/e0833634/lama/data/swiss_2023_9/uniref50_random90split_8k_512_valid_Batch_indices.pkl', 'rb') as f:\n",
-    "    batch_indices_ = pickle.load(f)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "1440990"
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "len(batch_indices_)"
    ],
    "metadata": {
@@ -282,287 +210,6 @@
    "outputs": [],
    "source": [
     "dataloader = DataLoader(combined_dataset, batch_sampler=batch_indices, pin_memory=True)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Start combining datasets\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'self' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Input \u001B[0;32mIn [2]\u001B[0m, in \u001B[0;36m<cell line: 17>\u001B[0;34m()\u001B[0m\n\u001B[1;32m     11\u001B[0m combined_datasets \u001B[38;5;241m=\u001B[39m DatasetDict({\n\u001B[1;32m     12\u001B[0m             \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mtrain\u001B[39m\u001B[38;5;124m'\u001B[39m: train_dataset,\n\u001B[1;32m     13\u001B[0m             \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mvalid\u001B[39m\u001B[38;5;124m'\u001B[39m: validation_dataset\n\u001B[1;32m     14\u001B[0m         })\n\u001B[1;32m     16\u001B[0m \u001B[38;5;66;03m# If you want to save the combined dataset:\u001B[39;00m\n\u001B[0;32m---> 17\u001B[0m combined_datasets\u001B[38;5;241m.\u001B[39msave_to_disk(\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241m.\u001B[39mdataset_path)\n\u001B[1;32m     18\u001B[0m \u001B[38;5;28;01mdel\u001B[39;00m combined_datasets\n\u001B[1;32m     19\u001B[0m gc\u001B[38;5;241m.\u001B[39mcollect()\n",
-      "\u001B[0;31mNameError\u001B[0m: name 'self' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# Oct 9, combine datasets together (previously failed due to some minor typos\n",
-    "from datasets import Dataset, DatasetDict, load_from_disk\n",
-    "import gc\n",
-    "train_combined_path = '/data/rozen/home/e0833634/lama/protllama/batch_script/train_combined_tokenized_sequences.hf'\n",
-    "validation_combined_path = '/data/rozen/home/e0833634/lama/protllama/batch_script/valid_combined_tokenized_sequences.hf'\n",
-    "\n",
-    "# Load them\n",
-    "train_dataset = load_from_disk(train_combined_path)\n",
-    "validation_dataset = load_from_disk(validation_combined_path)\n",
-    "\n",
-    "print('Start combining datasets')\n",
-    "combined_datasets = DatasetDict({\n",
-    "            'train': train_dataset,\n",
-    "            'valid': validation_dataset\n",
-    "        })\n",
-    "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [],
-   "source": [
-    "dataset_path = f'/data/rozen/home/e0833634/lama/data/swiss_2023_9/uniref50_random90split_8k_512_Dataset.hf'"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Saving the dataset (0/149 shards):   0%|          | 0/13044435 [00:00<?, ? examples/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "a94d19a2a57e4c519a196fa3b4fde263"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Saving the dataset (0/17 shards):   0%|          | 0/1440990 [00:00<?, ? examples/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "87c56ec71a7a4dcabbb180c0cc828152"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "1113"
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# If you want to save the combined dataset:\n",
-    "combined_datasets.save_to_disk(dataset_path)\n",
-    "del combined_datasets\n",
-    "gc.collect()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# gather 1st million everything for demo"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Start combining datasets\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "Saving the dataset (0/3 shards):   0%|          | 0/253440 [00:00<?, ? examples/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "087e0a53680d49cbb0eaf1cbc0ba1a22"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Saving the dataset (0/3 shards):   0%|          | 0/232711 [00:00<?, ? examples/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "279b6c97b3174121944d4e3394f9de89"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "267"
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from datasets import Dataset, DatasetDict, load_from_disk\n",
-    "import gc\n",
-    "import pickle\n",
-    "train_combined_path = '/data/rozen/home/e0833634/lama/protllama/batch_script/train_intermediate_processed_dataset_1000000.pkl'\n",
-    "validation_combined_path = '/data/rozen/home/e0833634/lama/protllama/batch_script/valid_intermediate_processed_dataset_1000000.pkl'\n",
-    "\n",
-    "all_attention_masks = []\n",
-    "all_input_ids = []\n",
-    "all_labels = []\n",
-    "with open(train_combined_path,\n",
-    "          'rb') as f:\n",
-    "    dataset = pickle.load(f)\n",
-    "    all_attention_masks.extend([batch['attention_mask'] for batch in dataset])\n",
-    "    all_input_ids.extend([batch['input_ids'] for batch in dataset])\n",
-    "    all_labels.extend([batch['labels'] for batch in dataset])\n",
-    "train_dataset = Dataset.from_dict({\n",
-    "    'attention_mask': all_attention_masks,\n",
-    "    'input_ids': all_input_ids,\n",
-    "    'labels': all_labels\n",
-    "})\n",
-    "\n",
-    "all_attention_masks = []\n",
-    "all_input_ids = []\n",
-    "all_labels = []\n",
-    "with open(validation_combined_path,'rb') as f:\n",
-    "    dataset = pickle.load(f)\n",
-    "    all_attention_masks.extend([batch['attention_mask'] for batch in dataset])\n",
-    "    all_input_ids.extend([batch['input_ids'] for batch in dataset])\n",
-    "    all_labels.extend([batch['labels'] for batch in dataset])\n",
-    "validation_dataset = Dataset.from_dict({\n",
-    "    'attention_mask': all_attention_masks,\n",
-    "    'input_ids': all_input_ids,\n",
-    "    'labels': all_labels\n",
-    "})\n",
-    "\n",
-    "print('Start combining datasets')\n",
-    "combined_datasets = DatasetDict({\n",
-    "            'train': train_dataset,\n",
-    "            'valid': validation_dataset\n",
-    "        })\n",
-    "dataset_path = f'/data/rozen/home/e0833634/lama/protllama/batch_script/uniref50_random90split_8k_512_first_1million_dataset.hf'\n",
-    "# If you want to save the combined dataset:\n",
-    "combined_datasets.save_to_disk(dataset_path)\n",
-    "del combined_datasets\n",
-    "gc.collect()\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "outputs": [],
-   "source": [
-    "with open('/data/rozen/home/e0833634/lama/protllama/batch_script/train_intermediate_checkpoint_batches_1000000.pkl', 'rb') as f:\n",
-    "    batch_indices_train = pickle.load(f)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [],
-   "source": [
-    "with open('/data/rozen/home/e0833634/lama/protllama/batch_script/valid_intermediate_checkpoint_batches_1000000.pkl', 'rb') as f:\n",
-    "    batch_indices_valid = pickle.load(f)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "outputs": [],
-   "source": [
-    "with open('/data/rozen/home/e0833634/lama/protllama/batch_script/first_1million_batches.pkl', 'wb') as f:\n",
-    "    pickle.dump((batch_indices_train, batch_indices_valid), f)"
    ],
    "metadata": {
     "collapsed": false,
